# Stellane

./: README.md
core/: stellane_server.cpp  stellane_server.hpp
core/handlers/: handlers.hpp
core/middleware/: middleware.hpp
core/route/: router.cpp  router.hpp
docs/: architecture.md  cli-reference.md  manifest-json-spec.md  quickstart.md  registry-template-spec.md  router-spec.md  server-spec.md
docs/changelog/: README.md  UNRELEASED.md
docs/concepts/: context.md  handler.md  middleware.md  router.md
docs/internals/: async_runtime.md  context_propagation.md  parameter_injection.md  req_res.md  response_pipeline.md  routing_tree.md
docs/reference/: context.md  router.md  runtime.md  server.md
docs/runtime/: go-native.md
stellane/: CMakeLists.txt  vcpkg.json
stellane/include/stellane/core/: context.h  task.h
stellane/include/stellane/http/: request.h  response.h
stellane/include/stellane/routing/: rounter.h
stellane/include/stellane/runtime/: event_loop.h  runtime.h  runtime_config.h  runtime_stats.h  task_scheduler.h
stellane/include/stellane/runtime/backends/: backend_interface.h
stellane/include/stellane/runtime/config/: backend_config.h  config_enums.h  performance_config.h  recovery_config.h  worker_config.h
stellane/include/stellane/utils/: logger.h
stellane/src/core/: context.cpp  task.cpp
stellane/src/http/: request.cpp  response.cpp
stellane/src/routing/: router.cpp
stellane/src/runtime/: event_loop.cpp  runtime.cpp  runtime_config.cpp  runtime_stats.cpp  task_scheduler.cpp
stellane/src/utils/: logger.cpp
